# gitt

./: .gitignore  .gitt  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  package.json  plan.md  pnpm-lock.yaml  tsconfig.json  vitest.config.mts
.claude/commands/: release.md
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md
src/: app.rs  config.rs  display.ts  errors.ts  git.rs  github.rs  index.ts  main.rs  review.rs  self_update.rs  ui.rs  update.rs
src/commands/: clean.ts  config.ts  rebase.ts  stash.ts  upgrade.ts
src/utils/: config.ts  git.ts
tests/: errors.test.ts
tests/commands/: upgrade.test.ts
tests/utils/: config.test.ts  config.validation.test.ts  git.test.ts
