[package]
name = "gitt-monitor"
version = "2.4.2"
edition = "2024"
description = "A lightweight TUI git status monitor for terminal split panes"
license = "MIT"
repository = "https://github.com/harryisfish/gitt"
homepage = "https://github.com/harryisfish/gitt"
keywords = ["git", "tui", "terminal", "monitor", "status"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gitt"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
anyhow = "1"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
tar = "0.4"
